--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Student at <strong><a href="https://www.udemy.com">Udemy</a></strong>
         </em></P>
         <p>
-          I love coffee, painting. I'm a student at Udemy, learning Web Developpment, from a course that my boyfriend gifted me.
+          I love coffee, painting. I'm a student at Udemy, learning Web Development, from a course that my boyfriend gifted me.
         </p>
       </td>
     </tr>
@@ -26,15 +26,15 @@
   <hr />
   <h3>Favorite Books</h3>
   <ul>
-    <li><a href="https://www.bookbub.com/books/her-soul-to-take-souls-trilogy-by-harley-laroux">
+    <li>
       Her soul to take by Harley Laroux
-    </a></li>
-    <li><a href="https://www.bookbub.com/books/the-dare-by-harley-laroux">
+    </li>
+    <li>
       The Dare by Harley Laroux
-    </a></li>
-    <li><a href="https://www.bookbub.com/books/corrupt-devil-s-night-1-by-penelope-douglas">
+    </li>
+    <li>
       Corrupt by Penelope Douglas
-    </a></li>
+    </li>
   </ul>
   <hr />
   <h3>Sudies</h3>
@@ -71,7 +71,7 @@
         2022
       </td>
       <td>
-        Student at Udemy Web Developpment
+        Student at Udemy Web Development
       </td>
     </tr>
         </tbody>
@@ -97,7 +97,7 @@
         </tr>
       <tr>
       <td>
-        Web Developpment
+        Web Development
       </td>
         <td>
            ★★★★
